# buildutils

./: .gitignore  CHANGELOG.md  README.md  functions  mkdocs.yml  pyproject.toml  tests
.github/workflows/: docs.yml  release.yml  test.yml
benchmarks/: run.py
docs/: index.md
docs/api/: reference.md
docs/guide/: commands.md  exclude.md  file-db.md  formats.md  install.md  unattended.md
examples/: stage_and_package.sh
scripts/: install
scripts/coquilib/cli/: args.py  utils.py
src/buildutils/: __init__.py  __main__.py  common.py  compact.py  db.py  dbdump.py  initdb.py  install.py  scan.py
src/pkgforge/: AGENTS.md  __init__.py  __main__.py  common.py  compact.py  db.py  dbdump.py  exclude.py  initdb.py  install.py  scan.py
tests/: test_buildutils.py  test_db.py  test_formats.py  test_pkgforge.py
