[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildutils"
version = "0.1.0"
authors = [{ name = "jose-pr" }]
description = "Stage files into a build root and record their install metadata for packaging"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
dependencies = ["duho>=0.3.2", "pyyaml"]

[project.optional-dependencies]
dev = ["build", "twine", "hatchling", "pytest"]

[project.scripts]
buildutils = "buildutils:main"

[project.urls]
Homepage = "https://github.com/jose-pr/buildutils/"
Issues = "https://github.com/jose-pr/buildutils/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
reportPrivateImportUsage = false
reportUnusedExpression = false
