[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkgforge"
version = "0.1.0"
authors = [{ name = "jose-pr" }]
description = "Stage files into a build root and record their install metadata for packaging"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
dependencies = ["duho>=0.3.2", "pyyaml"]

[project.optional-dependencies]
dev = ["build", "twine", "hatchling", "pytest"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
pkgforge = "pkgforge:main"

[project.urls]
Homepage = "https://github.com/jose-pr/pkgforge/"
Documentation = "https://jose-pr.github.io/pkgforge/"
Issues = "https://github.com/jose-pr/pkgforge/issues"


# Ship the consumer-facing docs inside the installed package, so they are
# readable from site-packages via importlib.resources without the repo.
# src/pkgforge/AGENTS.md is included automatically by living in the package
# dir; the repo-root AGENTS.md is development-only and deliberately not
# shipped.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "pkgforge/README.md"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
reportPrivateImportUsage = false
reportUnusedExpression = false
